Deadline Theming and fixes

--- a/patternlab/public/patterns/01-molecules-04-panes-deadline-funding/01-molecules-04-panes-deadline-funding.escaped.html
+++ b/patternlab/public/patterns/01-molecules-04-panes-deadline-funding/01-molecules-04-panes-deadline-funding.escaped.html
@@ -5,10 +5,14 @@
       &lt;div class=&quot;field-items&quot;&gt;
         &lt;div class=&quot;field-item even&quot;&gt;
           &lt;div class=&quot;date-display-single&quot;&gt;
-            &lt;span class=&quot;date-display-single__number&quot;&gt;14&lt;/span&gt;
+            31
           &lt;/div&gt; 
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
+    &lt;div class=&quot;field--funding-deadline__info&quot;&gt;
+    &lt;p class=&quot;field--funding-deadline__date&quot;&gt;September 31st, 2015&lt;/p&gt;
+    &lt;p class=&quot;field--funding-deadline__time&quot;&gt;5:00PM EST&lt;/p&gt;
+    &lt;/div&gt;
   &lt;/div&gt;
-&lt;/div&gt; 
+&lt;/div&gt;  
