--- a/patternlab/public/patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html
+++ b/patternlab/public/patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html
@@ -52,20 +52,12 @@
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
 <div class="pane"> 
-  <h2 class="pane__title">Deadline</h2>
+  <h2 class="pane__title">How to Apply</h2>
   <div class="pane__content">
-    <div class="field field--funding-deadline">
-      <div class="field-items">
-        <div class="field-item even">
-          <div class="date-display-single">
-            31
-          </div> 
-        </div>
-      </div>
-    </div>
-    <div class="field--funding-deadline__info">
-    <p class="field--funding-deadline__date">September 31st, 2015</p>
-    <p class="field--funding-deadline__time">5:00PM EST</p>
+    <div class="view view--how-to-apply">
+        <a class="button button--edit button--highlight">
+          Apply For Opportunity    
+        </a>
     </div>
   </div>
 </div>  
@@ -73,9 +65,9 @@
     	
 	<script>
 		// handle injection of items from PHP
-		var patternPartial = "molecules-deadline-funding";
+		var patternPartial = "molecules-how-to-apply-funding";
 		var lineage        = [];
-		var lineageR       = [{"lineagePattern":"organisms-funding","lineagePath":"..\/..\/patterns\/02-organisms-01-content-types-04-funding\/02-organisms-01-content-types-04-funding.html","lineageState":"inprogress"}];
+		var lineageR       = [];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
 	</script>
