--- a/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
@@ -113,13 +113,17 @@
               <div class="field-items">
                 <div class="field-item even">
                   <div class="date-display-single">
-                    <span class="date-display-single__number">14</span>
+                    31
                   </div> 
                 </div>
               </div>
             </div>
+            <div class="field--funding-deadline__info">
+            <p class="field--funding-deadline__date">September 31st, 2015</p>
+            <p class="field--funding-deadline__time">5:00PM EST</p>
+            </div>
           </div>
-        </div>       </div>
+        </div>        </div>
       <div class="l-box-third">
         <div style="background: #ccc; color: #fff; font-weight: bold; text-align: center;">
         APPLY BUTTONZ<br>
