--- a/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -221,13 +221,17 @@
       <div class="field-items">
         <div class="field-item even">
           <div class="date-display-single">
-            <span class="date-display-single__number">14</span>
+            31
           </div> 
         </div>
       </div>
     </div>
+    <div class="field--funding-deadline__info">
+    <p class="field--funding-deadline__date">September 31st, 2015</p>
+    <p class="field--funding-deadline__time">5:00PM EST</p>
+    </div>
   </div>
-</div> 
+</div>  
 							<div class="sg-code" style="display: none">
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
@@ -239,13 +243,17 @@
       &lt;div class=&quot;field-items&quot;&gt;
         &lt;div class=&quot;field-item even&quot;&gt;
           &lt;div class=&quot;date-display-single&quot;&gt;
-            &lt;span class=&quot;date-display-single__number&quot;&gt;14&lt;/span&gt;
+            31
           &lt;/div&gt; 
         &lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt;
+    &lt;div class=&quot;field--funding-deadline__info&quot;&gt;
+    &lt;p class=&quot;field--funding-deadline__date&quot;&gt;September 31st, 2015&lt;/p&gt;
+    &lt;p class=&quot;field--funding-deadline__time&quot;&gt;5:00PM EST&lt;/p&gt;
+    &lt;/div&gt;
   &lt;/div&gt;
-&lt;/div&gt; 
+&lt;/div&gt;  
 									</code>
 								</pre>
 							</div>
@@ -576,6 +584,38 @@
     &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
+					<div id="molecules-how-to-apply-funding" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html" class="patternLink" data-patternpartial="molecules-how-to-apply-funding">How To Apply Funding</a></h2>
+						<div class="sg-pattern-body">
+							<div class="pane"> 
+  <h2 class="pane__title">How to Apply</h2>
+  <div class="pane__content">
+    <div class="view view--how-to-apply">
+        <a class="button button--edit button--highlight">
+          Apply For Opportunity    
+        </a>
+    </div>
+  </div>
+</div>  
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;pane&quot;&gt; 
+  &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
+  &lt;div class=&quot;pane__content&quot;&gt;
+    &lt;div class=&quot;view view--how-to-apply&quot;&gt;
+        &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
+          Apply For Opportunity    
+        &lt;/a&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;  
 									</code>
 								</pre>
 							</div>
