minor corrections and merging

--- a/patternlab/public/patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html
+++ b/patternlab/public/patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html
@@ -51,14 +51,12 @@
     <div class="skiplinks">
       <a href="#main" class="skiplinks__link element-invisible element-focusable">Skip to main content</a>
     </div>
-<div class="pane"> 
+<div class="pane pane--how-to-apply"> 
   <h2 class="pane__title">How to Apply</h2>
-  <div class="pane__content">
-    <div class="view view--how-to-apply">
-        <a class="button button--edit button--highlight">
-          Apply For Opportunity    
-        </a>
-    </div>
+  <div class="pane__content">     
+    <a class="button button--edit button--highlight">
+      Apply For Opportunity    
+    </a>
   </div>
 </div>  
     <!--DO NOT REMOVE-->
