--- a/patternlab/public/patterns/03-templates-04-funding-detail/03-templates-04-funding-detail.escaped.html
+++ b/patternlab/public/patterns/03-templates-04-funding-detail/03-templates-04-funding-detail.escaped.html
@@ -103,31 +103,23 @@
           &lt;h2 class=&quot;pane__title&quot;&gt;Deadline&lt;/h2&gt;
           &lt;div class=&quot;pane__content&quot;&gt;
             &lt;div class=&quot;field field--funding-deadline&quot;&gt;
-              &lt;div class=&quot;field-items&quot;&gt;
-                &lt;div class=&quot;field-item even&quot;&gt;
-                  &lt;div class=&quot;date-display-single&quot;&gt;
-                    31
-                  &lt;/div&gt; 
-                &lt;/div&gt;
+              &lt;div class=&quot;field--funding-deadline__day&quot;&gt;31&lt;/div&gt;
+              &lt;div class=&quot;field--funding-deadline__info&quot;&gt;
+                &lt;div class=&quot;field--funding-deadline__date&quot;&gt;September 31st, 2015&lt;/div&gt;
+                &lt;div class=&quot;field--funding-deadline__time&quot;&gt;5:00PM EST&lt;/div&gt;
               &lt;/div&gt;
             &lt;/div&gt; 
-            &lt;div class=&quot;field--funding-deadline__info&quot;&gt;
-            &lt;p class=&quot;field--funding-deadline__date&quot;&gt;September 31st, 2015&lt;/p&gt;
-            &lt;p class=&quot;field--funding-deadline__time&quot;&gt;5:00PM EST&lt;/p&gt;
-            &lt;/div&gt;
           &lt;/div&gt;
         &lt;/div&gt;  
          
           &lt;/div&gt;
           &lt;div class=&quot;l-box-third&quot;&gt;
-        &lt;div class=&quot;pane&quot;&gt; 
+        &lt;div class=&quot;pane pane--how-to-apply&quot;&gt; 
           &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
-          &lt;div class=&quot;pane__content&quot;&gt;
-            &lt;div class=&quot;view view--how-to-apply&quot;&gt;
-                &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
-                  Apply For Opportunity    
-                &lt;/a&gt;
-            &lt;/div&gt;
+          &lt;div class=&quot;pane__content&quot;&gt;     
+            &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
+              Apply For Opportunity    
+            &lt;/a&gt;
           &lt;/div&gt;
         &lt;/div&gt;            &lt;/div&gt;
         &lt;/div&gt;
