--- a/patternlab/public/patterns/01-molecules-04-panes-deadline-funding/01-molecules-04-panes-deadline-funding.html
+++ b/patternlab/public/patterns/01-molecules-04-panes-deadline-funding/01-molecules-04-panes-deadline-funding.html
@@ -55,18 +55,12 @@
   <h2 class="pane__title">Deadline</h2>
   <div class="pane__content">
     <div class="field field--funding-deadline">
-      <div class="field-items">
-        <div class="field-item even">
-          <div class="date-display-single">
-            31
-          </div> 
-        </div>
+      <div class="field--funding-deadline__day">31</div>
+      <div class="field--funding-deadline__info">
+        <div class="field--funding-deadline__date">September 31st, 2015</div>
+        <div class="field--funding-deadline__time">5:00PM EST</div>
       </div>
     </div> 
-    <div class="field--funding-deadline__info">
-    <p class="field--funding-deadline__date">September 31st, 2015</p>
-    <p class="field--funding-deadline__time">5:00PM EST</p>
-    </div>
   </div>
 </div>  
  
