--- a/patternlab/public/patterns/01-molecules-04-panes/index.html
+++ b/patternlab/public/patterns/01-molecules-04-panes/index.html
@@ -218,18 +218,12 @@
   <h2 class="pane__title">Deadline</h2>
   <div class="pane__content">
     <div class="field field--funding-deadline">
-      <div class="field-items">
-        <div class="field-item even">
-          <div class="date-display-single">
-            31
-          </div> 
-        </div>
+      <div class="field--funding-deadline__day">31</div>
+      <div class="field--funding-deadline__info">
+        <div class="field--funding-deadline__date">September 31st, 2015</div>
+        <div class="field--funding-deadline__time">5:00PM EST</div>
       </div>
     </div> 
-    <div class="field--funding-deadline__info">
-    <p class="field--funding-deadline__date">September 31st, 2015</p>
-    <p class="field--funding-deadline__time">5:00PM EST</p>
-    </div>
   </div>
 </div>  
  
@@ -242,18 +236,12 @@
   &lt;h2 class=&quot;pane__title&quot;&gt;Deadline&lt;/h2&gt;
   &lt;div class=&quot;pane__content&quot;&gt;
     &lt;div class=&quot;field field--funding-deadline&quot;&gt;
-      &lt;div class=&quot;field-items&quot;&gt;
-        &lt;div class=&quot;field-item even&quot;&gt;
-          &lt;div class=&quot;date-display-single&quot;&gt;
-            31
-          &lt;/div&gt; 
-        &lt;/div&gt;
+      &lt;div class=&quot;field--funding-deadline__day&quot;&gt;31&lt;/div&gt;
+      &lt;div class=&quot;field--funding-deadline__info&quot;&gt;
+        &lt;div class=&quot;field--funding-deadline__date&quot;&gt;September 31st, 2015&lt;/div&gt;
+        &lt;div class=&quot;field--funding-deadline__time&quot;&gt;5:00PM EST&lt;/div&gt;
       &lt;/div&gt;
     &lt;/div&gt; 
-    &lt;div class=&quot;field--funding-deadline__info&quot;&gt;
-    &lt;p class=&quot;field--funding-deadline__date&quot;&gt;September 31st, 2015&lt;/p&gt;
-    &lt;p class=&quot;field--funding-deadline__time&quot;&gt;5:00PM EST&lt;/p&gt;
-    &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;  
  
@@ -596,28 +584,24 @@
 					<div id="molecules-how-to-apply-funding" class="sg-pattern">
 						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html" class="patternLink" data-patternpartial="molecules-how-to-apply-funding">How To Apply Funding</a></h2>
 						<div class="sg-pattern-body">
-							<div class="pane"> 
+							<div class="pane pane--how-to-apply"> 
   <h2 class="pane__title">How to Apply</h2>
-  <div class="pane__content">
-    <div class="view view--how-to-apply">
-        <a class="button button--edit button--highlight">
-          Apply For Opportunity    
-        </a>
-    </div>
+  <div class="pane__content">     
+    <a class="button button--edit button--highlight">
+      Apply For Opportunity    
+    </a>
   </div>
 </div>  
 							<div class="sg-code" style="display: none">
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
 									<code>
-										&lt;div class=&quot;pane&quot;&gt; 
+										&lt;div class=&quot;pane pane--how-to-apply&quot;&gt; 
   &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
-  &lt;div class=&quot;pane__content&quot;&gt;
-    &lt;div class=&quot;view view--how-to-apply&quot;&gt;
-        &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
-          Apply For Opportunity    
-        &lt;/a&gt;
-    &lt;/div&gt;
+  &lt;div class=&quot;pane__content&quot;&gt;     
+    &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
+      Apply For Opportunity    
+    &lt;/a&gt;
   &lt;/div&gt;
 &lt;/div&gt;  
 									</code>
@@ -1110,22 +1094,21 @@
 						<div class="sg-pattern-body">
 							<div class="pane">
   <h2 class="pane__title">Related Subsectors</h2>
-    <div class="pane__content">
-      <div class="view view--subterms"> 
-          <div class="views-row"><a href="#">Agribusiness (SMSE)</a></div>
-          <div class="views-row"><a href="#">Agriculture and Climate Change</a></div>
-          <div class="views-row"><a href="#">Cultivation & Tools</a></div>
-          <div class="views-row"><a href="#">Financing & Policy</a></div>
-          <div class="views-row"><a href="#">Food Safety and Standards</a></div>
-          <div class="views-row"><a href="#">Irrigation</a></div>
-          <div class="views-row"><a href="#">Livestock & Aguiculture</a></div> 
-          <div class="views-row"><a href="#">Agriculture ICT & Technology</a></div>
-          <div class="views-row"><a href="#">Post Harvest</a></div>
-          <div class="views-row"><a href="#">Processing & Production</a></div>
-          <div class="views-row"><a href="#">Seeds & Stock</a></div>
-          <div class="views-row"><a href="#">Soil Management</a></div>
-          <div class="views-row"><a href="#">Other</a></div>
-      </div>
+  <div class="pane__content">
+    <div class="view view--subterms"> 
+      <div class="views-row"><a href="#">Agribusiness (SMSE)</a></div>
+      <div class="views-row"><a href="#">Agriculture and Climate Change</a></div>
+      <div class="views-row"><a href="#">Cultivation & Tools</a></div>
+      <div class="views-row"><a href="#">Financing & Policy</a></div>
+      <div class="views-row"><a href="#">Food Safety and Standards</a></div>
+      <div class="views-row"><a href="#">Irrigation</a></div>
+      <div class="views-row"><a href="#">Livestock & Aguiculture</a></div> 
+      <div class="views-row"><a href="#">Agriculture ICT & Technology</a></div>
+      <div class="views-row"><a href="#">Post Harvest</a></div>
+      <div class="views-row"><a href="#">Processing & Production</a></div>
+      <div class="views-row"><a href="#">Seeds & Stock</a></div>
+      <div class="views-row"><a href="#">Soil Management</a></div>
+      <div class="views-row"><a href="#">Other</a></div>
     </div>
   </div>
 </div>
@@ -1138,22 +1121,21 @@
 									<code>
 										&lt;div class=&quot;pane&quot;&gt;
   &lt;h2 class=&quot;pane__title&quot;&gt;Related Subsectors&lt;/h2&gt;
-    &lt;div class=&quot;pane__content&quot;&gt;
-      &lt;div class=&quot;view view--subterms&quot;&gt; 
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agribusiness (SMSE)&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture and Climate Change&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cultivation &amp; Tools&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Financing &amp; Policy&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Food Safety and Standards&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Irrigation&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Livestock &amp; Aguiculture&lt;/a&gt;&lt;/div&gt; 
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture ICT &amp; Technology&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Post Harvest&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Processing &amp; Production&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Seeds &amp; Stock&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Soil Management&lt;/a&gt;&lt;/div&gt;
-          &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Other&lt;/a&gt;&lt;/div&gt;
-      &lt;/div&gt;
+  &lt;div class=&quot;pane__content&quot;&gt;
+    &lt;div class=&quot;view view--subterms&quot;&gt; 
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agribusiness (SMSE)&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture and Climate Change&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cultivation &amp; Tools&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Financing &amp; Policy&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Food Safety and Standards&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Irrigation&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Livestock &amp; Aguiculture&lt;/a&gt;&lt;/div&gt; 
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture ICT &amp; Technology&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Post Harvest&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Processing &amp; Production&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Seeds &amp; Stock&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Soil Management&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Other&lt;/a&gt;&lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;
