--- a/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
+++ b/patternlab/public/patterns/02-organisms-01-content-types-04-funding/02-organisms-01-content-types-04-funding.html
@@ -110,31 +110,23 @@
           <h2 class="pane__title">Deadline</h2>
           <div class="pane__content">
             <div class="field field--funding-deadline">
-              <div class="field-items">
-                <div class="field-item even">
-                  <div class="date-display-single">
-                    31
-                  </div> 
-                </div>
+              <div class="field--funding-deadline__day">31</div>
+              <div class="field--funding-deadline__info">
+                <div class="field--funding-deadline__date">September 31st, 2015</div>
+                <div class="field--funding-deadline__time">5:00PM EST</div>
               </div>
             </div> 
-            <div class="field--funding-deadline__info">
-            <p class="field--funding-deadline__date">September 31st, 2015</p>
-            <p class="field--funding-deadline__time">5:00PM EST</p>
-            </div>
           </div>
         </div>  
          
       </div>
       <div class="l-box-third">
-        <div class="pane"> 
+        <div class="pane pane--how-to-apply"> 
           <h2 class="pane__title">How to Apply</h2>
-          <div class="pane__content">
-            <div class="view view--how-to-apply">
-                <a class="button button--edit button--highlight">
-                  Apply For Opportunity    
-                </a>
-            </div>
+          <div class="pane__content">     
+            <a class="button button--edit button--highlight">
+              Apply For Opportunity    
+            </a>
           </div>
         </div>        </div>
     </div>
