updated theme and markup for funding op apply button

--- a/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-01-content-types-02-innovation/02-organisms-01-content-types-02-innovation.html
+++ b/public/sites/all/themes/gesso/patternlab/patterns/02-organisms-01-content-types-02-innovation/02-organisms-01-content-types-02-innovation.html
@@ -194,7 +194,7 @@
     <div class="l-bottom">
 
       <div class="pane pane--node">
-        <h2 class="pane__title">About This Innovation</h2>
+        <h2 class="pane__title">About This Innovation</h2> 
         <div class="pane__content">
 
           <div class="node node--innovation node--full view-mode-full">
@@ -563,7 +563,29 @@
             </div>
           </div>
         </div>
-      </div>    </aside>
+      </div>      <div class="pane">
+        <h2 class="pane__title">Related Subsectors</h2>
+        <div class="pane__content">
+          <div class="view view--subterms"> 
+            <div class="views-row"><a href="#">Agribusiness (SMSE)</a></div>
+            <div class="views-row"><a href="#">Agriculture and Climate Change</a></div>
+            <div class="views-row"><a href="#">Cultivation & Tools</a></div>
+            <div class="views-row"><a href="#">Financing & Policy</a></div>
+            <div class="views-row"><a href="#">Food Safety and Standards</a></div>
+            <div class="views-row"><a href="#">Irrigation</a></div>
+            <div class="views-row"><a href="#">Livestock & Aguiculture</a></div> 
+            <div class="views-row"><a href="#">Agriculture ICT & Technology</a></div>
+            <div class="views-row"><a href="#">Post Harvest</a></div>
+            <div class="views-row"><a href="#">Processing & Production</a></div>
+            <div class="views-row"><a href="#">Seeds & Stock</a></div>
+            <div class="views-row"><a href="#">Soil Management</a></div>
+            <div class="views-row"><a href="#">Other</a></div>
+          </div>
+        </div>
+      </div>
+      
+        
+    </aside>
   </div>
 </div>
 
@@ -572,7 +594,7 @@
 	<script>
 		// handle injection of items from PHP
 		var patternPartial = "organisms-innovation";
-		var lineage        = [{"lineagePattern":"molecules-favorite-this","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-favorite-this\/01-molecules-04-panes-favorite-this.html","lineageState":"inprogress"},{"lineagePattern":"molecules-featured-assets","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-featured-assets\/01-molecules-04-panes-featured-assets.html","lineageState":"inprogress"},{"lineagePattern":"molecules-at-a-glance-innovation","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-at-a-glance-innovation\/01-molecules-04-panes-at-a-glance-innovation.html","lineageState":"inprogress"},{"lineagePattern":"molecules-innovation-assistance","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-innovation-assistance\/01-molecules-04-panes-innovation-assistance.html","lineageState":"inprogress"},{"lineagePattern":"molecules-point-of-contact","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-point-of-contact\/01-molecules-04-panes-point-of-contact.html","lineageState":"inprogress"},{"lineagePattern":"molecules-comments","lineagePath":"..\/..\/patterns\/01-molecules-02-drupal-comments\/01-molecules-02-drupal-comments.html","lineageState":"inprogress"},{"lineagePattern":"molecules-innovation-team","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-innovation-team\/01-molecules-04-panes-innovation-team.html","lineageState":"inprogress"},{"lineagePattern":"molecules-funded-by","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-funded-by\/01-molecules-04-panes-funded-by.html","lineageState":"inprogress"}];
+		var lineage        = [{"lineagePattern":"molecules-favorite-this","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-favorite-this\/01-molecules-04-panes-favorite-this.html","lineageState":"inprogress"},{"lineagePattern":"molecules-featured-assets","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-featured-assets\/01-molecules-04-panes-featured-assets.html","lineageState":"inprogress"},{"lineagePattern":"molecules-at-a-glance-innovation","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-at-a-glance-innovation\/01-molecules-04-panes-at-a-glance-innovation.html","lineageState":"inprogress"},{"lineagePattern":"molecules-innovation-assistance","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-innovation-assistance\/01-molecules-04-panes-innovation-assistance.html","lineageState":"inprogress"},{"lineagePattern":"molecules-point-of-contact","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-point-of-contact\/01-molecules-04-panes-point-of-contact.html","lineageState":"inprogress"},{"lineagePattern":"molecules-comments","lineagePath":"..\/..\/patterns\/01-molecules-02-drupal-comments\/01-molecules-02-drupal-comments.html","lineageState":"inprogress"},{"lineagePattern":"molecules-innovation-team","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-innovation-team\/01-molecules-04-panes-innovation-team.html","lineageState":"inprogress"},{"lineagePattern":"molecules-funded-by","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-funded-by\/01-molecules-04-panes-funded-by.html","lineageState":"inprogress"},{"lineagePattern":"molecules-related-subsectors","lineagePath":"..\/..\/patterns\/01-molecules-04-panes-related-subsectors\/01-molecules-04-panes-related-subsectors.html","lineageState":"inprogress"}];
 		var lineageR       = [{"lineagePattern":"templates-innovation-detail","lineagePath":"..\/..\/patterns\/03-templates-02-innovation-detail\/03-templates-02-innovation-detail.html","lineageState":"inprogress"}];
 		var patternState   = "inprogress";
 		var cssEnabled     = false;
