--- a/public/sites/all/themes/gesso/patternlab/patterns/03-templates-04-funding-detail/03-templates-04-funding-detail.escaped.html
+++ b/public/sites/all/themes/gesso/patternlab/patterns/03-templates-04-funding-detail/03-templates-04-funding-detail.escaped.html
@@ -83,35 +83,45 @@
             &lt;div class=&quot;view view--at-a-glance&quot;&gt;
               &lt;div class=&quot;views-row&quot;&gt;      
                 &lt;div class=&quot;views-field has-icon--favorite&quot;&gt;    
-                  &lt;span class=&quot;views-label views-label-count&quot;&gt;Favorites&lt;/span&gt;    
+                  &lt;span class=&quot;views-label&quot;&gt;Favorites&lt;/span&gt;    
                   &lt;span class=&quot;field-content&quot;&gt;1&lt;/span&gt;  
                 &lt;/div&gt;  
                 &lt;div class=&quot;views-field has-icon--comment&quot;&gt;    
-                  &lt;span class=&quot;views-label views-label-comment-count&quot;&gt;Comments&lt;/span&gt;    
+                  &lt;span class=&quot;views-label&quot;&gt;Comments&lt;/span&gt;    
                   &lt;span class=&quot;field-content&quot;&gt;2&lt;/span&gt;  
                 &lt;/div&gt;  
-                &lt;div class=&quot;views-field&quot;&gt;    
-                  &lt;span class=&quot;views-label&quot;&gt;Award Amount:&lt;/span&gt;    
-                  &lt;span class=&quot;field-content&quot;&gt;$100,000&lt;/span&gt;  
+                &lt;div class=&quot;views-field has-icon--amount&quot;&gt;    
+                  &lt;span class=&quot;views-label&quot;&gt;&lt;/span&gt;    
+                  &lt;span class=&quot;field__label&quot;&gt;$100,000&lt;/span&gt;  
                 &lt;/div&gt;  
               &lt;/div&gt;
             &lt;/div&gt;
           &lt;/div&gt;
-        &lt;/div&gt;          &lt;/div&gt;
+        &lt;/div&gt;           &lt;/div&gt;
           &lt;div class=&quot;l-box-second&quot;&gt;
-            &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
-            DEADLINEZ&lt;br&gt;
-            GO&lt;br&gt;
-            HERE&lt;br&gt;
+        &lt;div class=&quot;pane&quot;&gt; 
+          &lt;h2 class=&quot;pane__title&quot;&gt;Deadline&lt;/h2&gt;
+          &lt;div class=&quot;pane__content&quot;&gt;
+            &lt;div class=&quot;field field--funding-deadline&quot;&gt;
+              &lt;div class=&quot;field--funding-deadline__day&quot;&gt;31&lt;/div&gt;
+              &lt;div class=&quot;field--funding-deadline__info&quot;&gt;
+                &lt;div class=&quot;field--funding-deadline__date&quot;&gt;September 31st, 2015&lt;/div&gt;
+                &lt;div class=&quot;field--funding-deadline__time&quot;&gt;5:00PM EST&lt;/div&gt;
+              &lt;/div&gt;
+            &lt;/div&gt; 
           &lt;/div&gt;
+        &lt;/div&gt;  
+         
           &lt;/div&gt;
           &lt;div class=&quot;l-box-third&quot;&gt;
-            &lt;div style=&quot;background: #ccc; color: #fff; font-weight: bold; text-align: center;&quot;&gt;
-            APPLY BUTTONZ&lt;br&gt;
-            GO&lt;br&gt;
-            HERE&lt;br&gt;
+        &lt;div class=&quot;pane pane--how-to-apply&quot;&gt; 
+          &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
+          &lt;div class=&quot;pane__content&quot;&gt;     
+            &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
+              Apply For Opportunity    
+            &lt;/a&gt;
           &lt;/div&gt;
-          &lt;/div&gt;
+        &lt;/div&gt;            &lt;/div&gt;
         &lt;/div&gt;
       &lt;/div&gt;
       &lt;div class=&quot;l-wrapper layout-constrain&quot;&gt;
