--- a/public/sites/all/themes/gesso/patternlab/patterns/01-molecules-04-panes/index.html
+++ b/public/sites/all/themes/gesso/patternlab/patterns/01-molecules-04-panes/index.html
@@ -66,21 +66,21 @@
     <div class="view view--at-a-glance">
       <div class="views-row">      
         <div class="views-field has-icon--favorite">    
-          <span class="views-label views-label-count">Favorites</span>    
+          <span class="views-label">Favorites</span>    
           <span class="field-content">1</span>  
         </div>  
         <div class="views-field has-icon--comment">    
-          <span class="views-label views-label-comment-count">Comments</span>    
+          <span class="views-label">Comments</span>    
           <span class="field-content">2</span>  
         </div>  
-        <div class="views-field">    
-          <span class="views-label">Award Amount:</span>    
-          <span class="field-content">$100,000</span>  
+        <div class="views-field has-icon--amount">    
+          <span class="views-label"></span>    
+          <span class="field__label">$100,000</span>  
         </div>  
       </div>
     </div>
   </div>
-</div>
+</div> 
 							<div class="sg-code" style="display: none">
 								<h3 class="sg-code-head">HTML</h3>
 								<pre class="sg-code-html">
@@ -91,21 +91,21 @@
     &lt;div class=&quot;view view--at-a-glance&quot;&gt;
       &lt;div class=&quot;views-row&quot;&gt;      
         &lt;div class=&quot;views-field has-icon--favorite&quot;&gt;    
-          &lt;span class=&quot;views-label views-label-count&quot;&gt;Favorites&lt;/span&gt;    
+          &lt;span class=&quot;views-label&quot;&gt;Favorites&lt;/span&gt;    
           &lt;span class=&quot;field-content&quot;&gt;1&lt;/span&gt;  
         &lt;/div&gt;  
         &lt;div class=&quot;views-field has-icon--comment&quot;&gt;    
-          &lt;span class=&quot;views-label views-label-comment-count&quot;&gt;Comments&lt;/span&gt;    
+          &lt;span class=&quot;views-label&quot;&gt;Comments&lt;/span&gt;    
           &lt;span class=&quot;field-content&quot;&gt;2&lt;/span&gt;  
         &lt;/div&gt;  
-        &lt;div class=&quot;views-field&quot;&gt;    
-          &lt;span class=&quot;views-label&quot;&gt;Award Amount:&lt;/span&gt;    
-          &lt;span class=&quot;field-content&quot;&gt;$100,000&lt;/span&gt;  
+        &lt;div class=&quot;views-field has-icon--amount&quot;&gt;    
+          &lt;span class=&quot;views-label&quot;&gt;&lt;/span&gt;    
+          &lt;span class=&quot;field__label&quot;&gt;$100,000&lt;/span&gt;  
         &lt;/div&gt;  
       &lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
-&lt;/div&gt;
+&lt;/div&gt; 
 									</code>
 								</pre>
 							</div>
@@ -206,6 +206,46 @@
     &lt;/div&gt; 
   &lt;/div&gt;
 &lt;/div&gt; 
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
+					<div id="molecules-deadline-funding" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-deadline-funding/01-molecules-04-panes-deadline-funding.html" class="patternLink" data-patternpartial="molecules-deadline-funding">Deadline Funding</a></h2>
+						<div class="sg-pattern-body">
+							<div class="pane"> 
+  <h2 class="pane__title">Deadline</h2>
+  <div class="pane__content">
+    <div class="field field--funding-deadline">
+      <div class="field--funding-deadline__day">31</div>
+      <div class="field--funding-deadline__info">
+        <div class="field--funding-deadline__date">September 31st, 2015</div>
+        <div class="field--funding-deadline__time">5:00PM EST</div>
+      </div>
+    </div> 
+  </div>
+</div>  
+ 
+
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;pane&quot;&gt; 
+  &lt;h2 class=&quot;pane__title&quot;&gt;Deadline&lt;/h2&gt;
+  &lt;div class=&quot;pane__content&quot;&gt;
+    &lt;div class=&quot;field field--funding-deadline&quot;&gt;
+      &lt;div class=&quot;field--funding-deadline__day&quot;&gt;31&lt;/div&gt;
+      &lt;div class=&quot;field--funding-deadline__info&quot;&gt;
+        &lt;div class=&quot;field--funding-deadline__date&quot;&gt;September 31st, 2015&lt;/div&gt;
+        &lt;div class=&quot;field--funding-deadline__time&quot;&gt;5:00PM EST&lt;/div&gt;
+      &lt;/div&gt;
+    &lt;/div&gt; 
+  &lt;/div&gt;
+&lt;/div&gt;  
+ 
+
 									</code>
 								</pre>
 							</div>
@@ -536,6 +576,34 @@
     &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
+					<div id="molecules-how-to-apply-funding" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-how-to-apply-funding/01-molecules-04-panes-how-to-apply-funding.html" class="patternLink" data-patternpartial="molecules-how-to-apply-funding">How To Apply Funding</a></h2>
+						<div class="sg-pattern-body">
+							<div class="pane pane--how-to-apply"> 
+  <h2 class="pane__title">How to Apply</h2>
+  <div class="pane__content">     
+    <a class="button button--edit button--highlight">
+      Apply For Opportunity    
+    </a>
+  </div>
+</div>  
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;pane pane--how-to-apply&quot;&gt; 
+  &lt;h2 class=&quot;pane__title&quot;&gt;How to Apply&lt;/h2&gt;
+  &lt;div class=&quot;pane__content&quot;&gt;     
+    &lt;a class=&quot;button button--edit button--highlight&quot;&gt;
+      Apply For Opportunity    
+    &lt;/a&gt;
+  &lt;/div&gt;
+&lt;/div&gt;  
 									</code>
 								</pre>
 							</div>
@@ -1010,6 +1078,64 @@
           &lt;/div&gt; 
         &lt;/div&gt;
       &lt;/div&gt;
+    &lt;/div&gt;
+  &lt;/div&gt;
+&lt;/div&gt;
+
+  
+
+									</code>
+								</pre>
+							</div>
+						</div>
+					</div>
+					<div id="molecules-related-subsectors" class="sg-pattern">
+						<h2 class="sg-pattern-head" ><a href="../../patterns/01-molecules-04-panes-related-subsectors/01-molecules-04-panes-related-subsectors.html" class="patternLink" data-patternpartial="molecules-related-subsectors">Related Subsectors</a></h2>
+						<div class="sg-pattern-body">
+							<div class="pane">
+  <h2 class="pane__title">Related Subsectors</h2>
+  <div class="pane__content">
+    <div class="view view--subterms"> 
+      <div class="views-row"><a href="#">Agribusiness (SMSE)</a></div>
+      <div class="views-row"><a href="#">Agriculture and Climate Change</a></div>
+      <div class="views-row"><a href="#">Cultivation & Tools</a></div>
+      <div class="views-row"><a href="#">Financing & Policy</a></div>
+      <div class="views-row"><a href="#">Food Safety and Standards</a></div>
+      <div class="views-row"><a href="#">Irrigation</a></div>
+      <div class="views-row"><a href="#">Livestock & Aguiculture</a></div> 
+      <div class="views-row"><a href="#">Agriculture ICT & Technology</a></div>
+      <div class="views-row"><a href="#">Post Harvest</a></div>
+      <div class="views-row"><a href="#">Processing & Production</a></div>
+      <div class="views-row"><a href="#">Seeds & Stock</a></div>
+      <div class="views-row"><a href="#">Soil Management</a></div>
+      <div class="views-row"><a href="#">Other</a></div>
+    </div>
+  </div>
+</div>
+
+  
+
+							<div class="sg-code" style="display: none">
+								<h3 class="sg-code-head">HTML</h3>
+								<pre class="sg-code-html">
+									<code>
+										&lt;div class=&quot;pane&quot;&gt;
+  &lt;h2 class=&quot;pane__title&quot;&gt;Related Subsectors&lt;/h2&gt;
+  &lt;div class=&quot;pane__content&quot;&gt;
+    &lt;div class=&quot;view view--subterms&quot;&gt; 
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agribusiness (SMSE)&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture and Climate Change&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Cultivation &amp; Tools&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Financing &amp; Policy&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Food Safety and Standards&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Irrigation&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Livestock &amp; Aguiculture&lt;/a&gt;&lt;/div&gt; 
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Agriculture ICT &amp; Technology&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Post Harvest&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Processing &amp; Production&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Seeds &amp; Stock&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Soil Management&lt;/a&gt;&lt;/div&gt;
+      &lt;div class=&quot;views-row&quot;&gt;&lt;a href=&quot;#&quot;&gt;Other&lt;/a&gt;&lt;/div&gt;
     &lt;/div&gt;
   &lt;/div&gt;
 &lt;/div&gt;
